# cse-5441

./: .gitignore  README.md
pa1/: CMakeLists.txt  Makefile  README.md  parameter_sweep.sh  process_parameter_sweep.py
pa1/include/: amr.h  common.h
pa1/results/: testgrid_200_1166_results.txt  testgrid_400_12206_results.txt  testgrid_400_1636_results.txt  testgrid_50_201_results.txt  testgrid_50_78_results.txt
pa1/src/: amr.c  common.c  report.tex
pa2/: Makefile  process_results.py  tests.cfg  tests.sh
pa2/include/: amr.h  common.h
pa2/results/: testgrid_1000_296793_disposable_results.txt  testgrid_400_12206_persistent_results.txt
pa2/results/testgrid_1000_296793/: disposable  disposable_equal_boxes  persistent_equal_boxes
pa2/results/testgrid_400_12206/: disposable  disposable_equal_boxes
pa2/results/testgrid_512_196576/: persistent  (+1 more)
pa2/src/: common.c  lehman_caleb_disposable.c  lehman_caleb_equal_boxes_disposable.c  lehman_caleb_equal_boxes_persistent.c  lehman_caleb_persistent.c  report.tex
pa3/: Makefile  process_results.py  tests.cfg  tests.sh
pa3/include/: amr.h  common.h
pa3/src/: common.c  lehman_caleb_disposable.c  lehman_caleb_persistent.c  report.tex
pa4/: Makefile  tests.sh
pa4/include/: common.h  kernel.h
pa4/src/: amr.c  common.c  kernel.cu  kernel_disposable.cu  kernel_persistent.cu  report.tex
pa5/: Makefile  process_results.py
pa5/include/: amr.h  common.h
pa5/results/: notes.txt
pa5/src/: amr.c  common.c  report.tex
tools/: draw.py  gen.py  gen_rand.py  gen_unbalanced.py  gen_very_unbalanced.py  stats.py  testgrid
(+10 files in other folders)
